--- a/super_rocket_ragdolls.vcxproj.filters
+++ b/super_rocket_ragdolls.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\patch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\patch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
