Moved search patterns to separate file

--- a/super_rocket_ragdolls.vcxproj
+++ b/super_rocket_ragdolls.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\patch.h" />
+    <ClInclude Include="src\pattern.h" />
     <ClInclude Include="src\resource.h" />
   </ItemGroup>
   <ItemGroup>
