--- a/super_rocket_ragdolls.vcxproj.filters
+++ b/super_rocket_ragdolls.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="src\patch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\pattern.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\gdico.ico">
